# wschat-react-rust

./: .gitignore  package-lock.json  package.json  vite.config.ts
api/: Cargo.toml  Shuttle.toml
api/src/: main.rs
api/static/: index.html
api/static/assets/: index-0a4a3e9c.css  index-5fe4f47a.js
src/: App.tsx  index.css
src/components/: NamePrompt.tsx
